build/log/idf_py_stdout_output_35157
Command: ninja all
[1/9] Building C object esp-idf/main/CMakeFiles/__idf_main.dir/app_display.c.obj
FAILED: esp-idf/main/CMakeFiles/__idf_main.dir/app_display.c.obj 
/home/eric/.espressif/tools/xtensa-esp-elf/esp-15.2.0_20251204/xtensa-esp-elf/bin/xtensa-esp32s3-elf-gcc -DESP_PLATFORM -DIDF_VER=\"v6.0-beta1-945-g30e864c17f-dirt\" -DSOC_MMU_PAGE_SIZE=CONFIG_MMU_PAGE_SIZE -DSOC_XTAL_FREQ_MHZ=CONFIG_XTAL_FREQ -D_GLIBCXX_HAVE_POSIX_SEMAPHORE -D_GLIBCXX_USE_POSIX_SEMAPHORE -D_GNU_SOURCE -D_POSIX_READER_WRITER_LOCKS -I/home/eric/Desktop/waveshare_128_lcd/ESP32-LLL/build/config -I/home/eric/Desktop/waveshare_128_lcd/ESP32-LLL/main -I/home/eric/esp/v6.0/esp-idf/components/esp_libc/platform_include -I/home/eric/esp/v6.0/esp-idf/components/freertos/config/include -I/home/eric/esp/v6.0/esp-idf/components/freertos/config/include/freertos -I/home/eric/esp/v6.0/esp-idf/components/freertos/config/xtensa/include -I/home/eric/esp/v6.0/esp-idf/components/freertos/FreeRTOS-Kernel/include -I/home/eric/esp/v6.0/esp-idf/components/freertos/FreeRTOS-Kernel/portable/xtensa/include -I/home/eric/esp/v6.0/esp-idf/components/freertos/FreeRTOS-Kernel/portable/xtensa/include/freertos -I/home/eric/esp/v6.0/esp-idf/components/freertos/esp_additions/include -I/home/eric/esp/v6.0/esp-idf/components/esp_hw_support/include -I/home/eric/esp/v6.0/esp-idf/components/esp_hw_support/include/soc -I/home/eric/esp/v6.0/esp-idf/components/esp_hw_support/dma/include -I/home/eric/esp/v6.0/esp-idf/components/esp_hw_support/ldo/include -I/home/eric/esp/v6.0/esp-idf/components/esp_hw_support/debug_probe/include -I/home/eric/esp/v6.0/esp-idf/components/esp_hw_support/etm/include -I/home/eric/esp/v6.0/esp-idf/components/esp_hw_support/mspi_timing_tuning/include -I/home/eric/esp/v6.0/esp-idf/components/esp_hw_support/mspi_timing_tuning/tuning_scheme_impl/include -I/home/eric/esp/v6.0/esp-idf/components/esp_hw_support/power_supply/include -I/home/eric/esp/v6.0/esp-idf/components/esp_hw_support/modem/include -I/home/eric/esp/v6.0/esp-idf/components/esp_hw_support/include/soc/esp32s3 -I/home/eric/esp/v6.0/esp-idf/components/esp_hw_support/port/esp32s3/. -I/home/eric/esp/v6.0/esp-idf/components/esp_hw_support/port/esp32s3/include -I/home/eric/esp/v6.0/esp-idf/components/esp_hw_support/mspi_timing_tuning/port/esp32s3/. -I/home/eric/esp/v6.0/esp-idf/components/esp_hw_support/mspi_timing_tuning/port/esp32s3/include -I/home/eric/esp/v6.0/esp-idf/components/heap/include -I/home/eric/esp/v6.0/esp-idf/components/heap/tlsf -I/home/eric/esp/v6.0/esp-idf/components/log/include -I/home/eric/esp/v6.0/esp-idf/components/soc/include -I/home/eric/esp/v6.0/esp-idf/components/soc/esp32s3 -I/home/eric/esp/v6.0/esp-idf/components/soc/esp32s3/include -I/home/eric/esp/v6.0/esp-idf/components/soc/esp32s3/register -I/home/eric/esp/v6.0/esp-idf/components/hal/platform_port/include -I/home/eric/esp/v6.0/esp-idf/components/hal/esp32s3/include -I/home/eric/esp/v6.0/esp-idf/components/hal/include -I/home/eric/esp/v6.0/esp-idf/components/esp_rom/include -I/home/eric/esp/v6.0/esp-idf/components/esp_rom/esp32s3/include -I/home/eric/esp/v6.0/esp-idf/components/esp_rom/esp32s3/include/esp32s3 -I/home/eric/esp/v6.0/esp-idf/components/esp_rom/esp32s3 -I/home/eric/esp/v6.0/esp-idf/components/esp_common/include -I/home/eric/esp/v6.0/esp-idf/components/esp_system/include -I/home/eric/esp/v6.0/esp-idf/components/esp_system/port/soc -I/home/eric/esp/v6.0/esp-idf/components/esp_system/port/include/private -I/home/eric/esp/v6.0/esp-idf/components/esp_stdio/include -I/home/eric/esp/v6.0/esp-idf/components/xtensa/esp32s3/include -I/home/eric/esp/v6.0/esp-idf/components/xtensa/include -I/home/eric/esp/v6.0/esp-idf/components/xtensa/deprecated_include -I/home/eric/esp/v6.0/esp-idf/components/esp_hal_dma/include -I/home/eric/esp/v6.0/esp-idf/components/esp_hal_dma/esp32s3/include -I/home/eric/esp/v6.0/esp-idf/components/esp_hal_gpio/include -I/home/eric/esp/v6.0/esp-idf/components/esp_hal_gpio/esp32s3/include -I/home/eric/esp/v6.0/esp-idf/components/esp_hal_usb/include -I/home/eric/esp/v6.0/esp-idf/components/esp_hal_usb/esp32s3/include -I/home/eric/esp/v6.0/esp-idf/components/esp_hal_ana_conv/include -I/home/eric/esp/v6.0/esp-idf/components/esp_hal_ana_conv/esp32s3/include -I/home/eric/esp/v6.0/esp-idf/components/lwip/include -I/home/eric/esp/v6.0/esp-idf/components/lwip/include/apps -I/home/eric/esp/v6.0/esp-idf/components/lwip/lwip/src/include -I/home/eric/esp/v6.0/esp-idf/components/lwip/port/include -I/home/eric/esp/v6.0/esp-idf/components/lwip/port/freertos/include -I/home/eric/esp/v6.0/esp-idf/components/lwip/port/esp32xx/include -I/home/eric/esp/v6.0/esp-idf/components/lwip/port/esp32xx/include/arch -I/home/eric/esp/v6.0/esp-idf/components/lwip/port/esp32xx/include/sys -I/home/eric/esp/v6.0/esp-idf/components/nvs_flash/include -I/home/eric/esp/v6.0/esp-idf/components/esp_partition/include -I/home/eric/esp/v6.0/esp-idf/components/esp_blockdev/include -I/home/eric/esp/v6.0/esp-idf/components/esp_lcd/include -I/home/eric/esp/v6.0/esp-idf/components/esp_lcd/interface -I/home/eric/esp/v6.0/esp-idf/components/esp_lcd/rgb/include -I/home/eric/esp/v6.0/esp-idf/components/esp_driver_gpio/include -I/home/eric/esp/v6.0/esp-idf/components/esp_driver_i2c/include -I/home/eric/esp/v6.0/esp-idf/components/esp_hal_i2c/esp32s3/include -I/home/eric/esp/v6.0/esp-idf/components/esp_hal_i2c/include -I/home/eric/esp/v6.0/esp-idf/components/esp_driver_spi/include -I/home/eric/esp/v6.0/esp-idf/components/esp_pm/include -I/home/eric/esp/v6.0/esp-idf/components/esp_driver_parlio/include -I/home/eric/esp/v6.0/esp-idf/components/esp_hal_parlio/include -I/home/eric/esp/v6.0/esp-idf/components/esp_hal_lcd/include -I/home/eric/esp/v6.0/esp-idf/components/esp_hal_lcd/esp32s3/include -I/home/eric/Desktop/waveshare_128_lcd/ESP32-LLL/managed_components/espressif__esp_lcd_gc9a01/include -I/home/eric/esp/v6.0/esp-idf/examples/common_components/protocol_examples_common/include @"/home/eric/Desktop/waveshare_128_lcd/ESP32-LLL/build/toolchain/cflags" -fdiagnostics-color=always -ffunction-sections -fdata-sections -Wall -Werror -Wno-error=unused-function -Wno-error=unused-variable -Wno-error=unused-but-set-variable -Wno-error=deprecated-declarations -Wextra -Wno-error=extra -Wno-unused-parameter -Wno-sign-compare -Wno-enum-conversion -gdwarf-4 -ggdb -Og -fno-shrink-wrap -fmacro-prefix-map=/home/eric/Desktop/waveshare_128_lcd/ESP32-LLL=. -fmacro-prefix-map=/home/eric/esp/v6.0/esp-idf=/IDF -fstrict-volatile-bitfields -fno-jump-tables -fno-tree-switch-conversion -std=gnu23 -Wno-old-style-declaration -fzero-init-padding-bits=all -fno-malloc-dce -DESP_LCD_GC9A01_VER_MAJOR=2 -DESP_LCD_GC9A01_VER_MINOR=0 -DESP_LCD_GC9A01_VER_PATCH=4 -MD -MT esp-idf/main/CMakeFiles/__idf_main.dir/app_display.c.obj -MF esp-idf/main/CMakeFiles/__idf_main.dir/app_display.c.obj.d -o esp-idf/main/CMakeFiles/__idf_main.dir/app_display.c.obj -c /home/eric/Desktop/waveshare_128_lcd/ESP32-LLL/main/app_display.c
/home/eric/Desktop/waveshare_128_lcd/ESP32-LLL/main/app_display.c: In function 'display_task':
/home/eric/Desktop/waveshare_128_lcd/ESP32-LLL/main/app_display.c:68:30: error: 'LCD_RGB_ELEMENT_ORDER_GRB' undeclared (first use in this function); did you mean 'LCD_RGB_ELEMENT_ORDER_RGB'?
   68 |             .rgb_ele_order = LCD_RGB_ELEMENT_ORDER_GRB,
      |                              ^~~~~~~~~~~~~~~~~~~~~~~~~
      |                              LCD_RGB_ELEMENT_ORDER_RGB
/home/eric/Desktop/waveshare_128_lcd/ESP32-LLL/main/app_display.c:68:30: note: each undeclared identifier is reported only once for each function it appears in
[2/9] Performing build step for 'bootloader'
[1/1] cd /home/eric/Desktop/waveshare_128_lcd/ESP32-LLL/build/bootloader && /home/eric/.espressif/python_env/idf6.0_py3.10_env/bin/python /home/eric/esp/v6.0/esp-idf/components/partition_table/check_sizes.py --offset 0x8000 bootloader 0x0 /home/eric/Desktop/waveshare_128_lcd/ESP32-LLL/build/bootloader/bootloader.bin
Bootloader binary size 0x5320 bytes. 0x2ce0 bytes (35%) free.
ninja: build stopped: subcommand failed.
